--- a/templates/parent_dashboard/dashboard.html
+++ b/templates/parent_dashboard/dashboard.html
@@ -1,7 +1,8 @@
-{% extends 'base/base.html' %}
+{% extends 'parent_dashboard/base.html' %}
 {% load static %}
 
 {% block title %}Parent Dashboard - EduSight{% endblock %}
+{% block page_title %}Dashboard Overview{% endblock %}
 
 {% block extra_css %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -71,6 +72,9 @@
 {% endblock %}
 
 {% block content %}
+<!-- Include Disclaimer Banner -->
+{% include 'parent_dashboard/components/disclaimer_banner.html' %}
+
 <div class="container-fluid py-4">
     <!-- Welcome Header -->
     <div class="row mb-4">
