--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -205,8 +205,12 @@
         </button>
         
         <div class="back-link">
+            <a href="{% url 'registration:signup' %}">
+                <i class="fas fa-user-plus me-1"></i>Don't have an account? Sign Up
+            </a>
+            <span class="mx-2">|</span>
             <a href="{% url 'website_home' %}">
-                <i class="fas fa-arrow-left"></i> Back to Dashboard
+                <i class="fas fa-arrow-left"></i> Back to Home
             </a>
         </div>
     </div>
